xrpl-macros/tests/smart_escrow/fail_not_a_fn.stderr
error: expected `fn`
 --> tests/smart_escrow/fail_not_a_fn.rs:4:1
  |
4 | struct Foo;
  | ^^^^^^
