xrpl-macros/tests/smart_escrow/fail_not_a_fn.rs
use xrpl_macros::smart_escrow;

#[smart_escrow]
struct Foo;

fn main() {}
